--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,9 +33,32 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/zorrianita
 excludes=
+file.reference.balloontip-1.2.4.1.jar=lib\\balloontip-1.2.4.1.jar
+file.reference.commons-beanutils-1.8.2.jar=lib\\reports\\commons-beanutils-1.8.2.jar
+file.reference.commons-collections-3.2.1.jar=lib\\reports\\commons-collections-3.2.1.jar
+file.reference.commons-digester-2.1.jar=lib\\reports\\commons-digester-2.1.jar
+file.reference.commons-javaflow-20060411.jar=lib\\reports\\commons-javaflow-20060411.jar
+file.reference.commons-logging-1.1.jar=lib\\reports\\commons-logging-1.1.jar
+file.reference.groovy-all-2.0.1.jar=lib\\reports\\groovy-all-2.0.1.jar
+file.reference.iReport.jar=lib\\reports\\iReport.jar
+file.reference.iText-2.1.7.js2.jar=lib\\reports\\iText-2.1.7.js2.jar
+file.reference.jasperreports-5.6.0.jar=lib\\reports\\jasperreports-5.6.0.jar
+file.reference.ojdbc7.jar=lib\\ojdbc7.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.balloontip-1.2.4.1.jar}:\
+    ${file.reference.ojdbc7.jar}:\
+    ${file.reference.commons-beanutils-1.8.2.jar}:\
+    ${file.reference.commons-collections-3.2.1.jar}:\
+    ${file.reference.commons-digester-2.1.jar}:\
+    ${file.reference.commons-javaflow-20060411.jar}:\
+    ${file.reference.commons-logging-1.1.jar}:\
+    ${file.reference.groovy-all-2.0.1.jar}:\
+    ${file.reference.iReport.jar}:\
+    ${file.reference.iText-2.1.7.js2.jar}:\
+    ${file.reference.jasperreports-5.6.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
