--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=zorrianita
+application.vendor=Alex
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,6 +33,7 @@ dist.jar=${dist.dir}/zorrianita.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/zorrianita
+endorsed.classpath=
 excludes=
 file.reference.balloontip-1.2.4.1.jar=lib\\balloontip-1.2.4.1.jar
 file.reference.commons-beanutils-1.8.2.jar=lib\\reports\\commons-beanutils-1.8.2.jar
@@ -44,6 +46,7 @@ file.reference.iReport.jar=lib\\reports\\iReport.jar
 file.reference.iText-2.1.7.js2.jar=lib\\reports\\iText-2.1.7.js2.jar
 file.reference.jasperreports-5.6.0.jar=lib\\reports\\jasperreports-5.6.0.jar
 file.reference.ojdbc7.jar=lib\\ojdbc7.jar
+file.reference.zorrianita-src=src
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -58,11 +61,12 @@ javac.classpath=\
     ${file.reference.groovy-all-2.0.1.jar}:\
     ${file.reference.iReport.jar}:\
     ${file.reference.iText-2.1.7.js2.jar}:\
-    ${file.reference.jasperreports-5.6.0.jar}
+    ${file.reference.jasperreports-5.6.0.jar}:\
+    ${file.reference.zorrianita-src}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
-javac.external.vm=true
+javac.external.vm=false
 javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
@@ -94,7 +98,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=zorrianita
-main.class=
+main.class=login.login
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
